<resources>
    <string name="app_name">Datting</string>
    <string name="facebook_app_id">242238417038850</string>
    <string name="fb_login_protocol_scheme">fb242238417038850</string>
    <string name="text_btnLoginFacebook">Continue with Facebook</string>
    <string name="text_btnLoginGoogle">Continue with Google</string>
    <string name="title">We will never post anythings</string>
    <string name="text_btnSignUp">Sign up with phone</string>
    <string name="title2">Already have an account?</string>
    <string name="text_txtSignIn"><u>Sign in</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Recently</string>
    <string name="title_chat">Chat</string>
    <string name="title_dashboard">Find</string>
    <string name="title_profile">Profile</string>
    <string name="send">SEND</string>
    <string name="enter_mess">Enter message</string>
    <string name="statusOnline">Online</string>
    <string name="statusOffline">Offline</string>
    <string name="batcap">Bắt gặp</string>
    <string name="profile">Hồ sơ</string>
    <string name="choose_image_profile">Chọn ảnh để xem hồ sơ của bạn</string>
    <string name="buy_credit">Mua credit</string>
    <string name="active_gold">Kích hoạt Dating Gold</string>
    <string name="setting_tittle">Cài đặt</string>
    <string name="policy">Quyền riêng tư</string>
    <string name="account_security">Tài khoản bảo mật</string>
    <string name="notification_setting">Thông báo</string>
    <string name="About_us">Giới thiệu</string>
    <string name="Support">Hỗ trợ</string>
    <string name="Account">Tài khoản</string>
    <string name="EditAccName">Họ tên</string>
    <string name="DateOfBirth">Ngày sinh</string>
    <string name="sex">Giới tính</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="Save">Lưu</string>
    <string name="my_info_head">Thông tin cá nhân</string>
    <string name="im_here_for">Tôi ở đây để</string>
    <string name="add">Thêm</string>
    <string name="Job_and_study">Công việc và học vấn</string>
    <string name="about_you">Về bạn</string>
    <string name="givememoreInfo">Cho chúng tôi biết thêm về bạn...</string>
    <string name="Height">Chiều cao</string>
    <string name="Weight">Cân nặng</string>
    <string name="Smoke">Hút thuốc</string>
    <string name="Acohol">Rượu bia</string>
    <string name="Language">Ngôn ngữ</string>
    <string name="Place">Nơi sống</string>
    <string name="Marry">Hôn nhân</string>
    <string name="Culture">Tôn giáo</string>
    <string name="Social_link">Mạng xã hội</string>
    <string name="connect">Kết nối</string>
    <string name="findnewfriend">Tìm bạn mới</string>
    <string name="toChat">Để chat</string>
    <string name="findAcloseFriend">Tìm một người bạn thân</string>
    <string name="findmyTrueLove">Tìm một mối quan hệ nghiêm túc</string>
    <string name="companyName">Tên công ty</string>
    <string name="Job">Nghề nghiệp</string>
    <string name="textAboutYou">Điều gì làm bạn nổi bật? Càng nhiều thông tin bạn càng trở nên thu hút.</string>
    <string name="introduceYourSelf">Giới thiệu về bạn...</string>
    <string name="Drink1">Thường xuyên uống rượu bia</string>
    <string name="Drink2">Tôi thích rượu bia</string>
    <string name="Drink3">Không uống rượu bia</string>
    <string name="Drink4">Tôi ghét rượu bia</string>
    <string name="Drink5">Không hiển thị</string>
    <string name="friend_online">Không có người nào đang hoạt động.</string>

</resources>