<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imhereBottomDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/imherefor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toiodayde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/im_here_for"
        android:textColor="#090909"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/findnewfriend"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/toChat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/findAcloseFriend"
            android:textColorLink="#00FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@android:style/Widget.Material.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/findmyTrueLove"
            android:textColor="#1B191A"
            android:textSize="18sp" />
    </RadioGroup>

</LinearLayout>