<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/profile"
            android:textColor="#0B0A0A"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/setting_btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:foregroundGravity="center"
            android:src="@drawable/setting_icon"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_chainStyle="packed"></de.hdodenhof.circleimageview.CircleImageView>


    <TextView
        android:id="@+id/my_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image_profile"
        android:textColor="#040404"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08071136" />

    <RelativeLayout
        android:id="@+id/rl_dong1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rl_dong2"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="#00FFFFFF"
            android:src="@drawable/coin" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_muaCredit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/add_icon" />

        <TextView
            android:id="@+id/tv_muaCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/buy_credit"
            android:textColor="#353535"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_muaCredit"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:background="#BABABA" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dong2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_dong1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_dong1"
        tools:layout_editor_absoluteX="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="#00FFFFFF"
            android:src="@drawable/datting_gold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_kichHoat"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/add_icon" />

        <TextView
            android:id="@+id/tv_kichHoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/active_gold"
            android:textColor="#353535"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hoàng Anh"
            android:textColor="#050505"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=", "
            android:textColor="#040404"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="#040404"
            android:textSize="28dp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>